# LogSystem

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: LoggingLibraryConfig.cmake.in
config/: logging.conf
docs/: API.md
log/: log.hpp
log/include/: AsyncLogProcessor.hpp - 未完成  ColoredFormatter.hpp  ConsoleSink.hpp  FileSink.hpp  Format.hpp  LogConfig.hpp  LogFormatter.hpp  LogLevel.hpp  LogMacros.hpp  LogMessage.hpp  LogSink.hpp  Logger.hpp
log/src/: ColoredFormatter.cpp  ConsoleSink.cpp  FileSink.cpp  LogConfig.cpp  LogFormatter.cpp  LogLevel.cpp  Logger.cpp
